fixed spacing issue with description

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --dark-card: #363636; 
 
     --primary-color: black;
-    --secondary-color: rgb(128, 128, 128);
+    --secondary-color: rgb(107, 105, 105);
     --gradient-color: linear-gradient(to right blue, purple, pink);
     --desktop-text-color: #42446e;
 }
@@ -274,10 +274,7 @@ a:hover {
     text-decoration: underline;
 }
 
-footer {
-    text-align: center;
-    color: var(--secondary-color)
-}
+
 
 /* Second page */
 .container-page2 {
@@ -371,7 +368,6 @@ footer {
     height: 100vh;
 
 }
-/* NEW SHIT */
 .slider {
     position: relative;
     width: 100%;
@@ -383,7 +379,6 @@ footer {
     
     width: 300px;
     height: 450px;
-    text-align: justify;
     transition: 0.6s;
     left: calc(50% - 110px);
 }
@@ -407,36 +402,35 @@ footer {
     right: 50px;
 }
 
-/* NEW SHIT */
-
-
-/* Fourth Page */
 .card {
     border-radius: 2rem;
     display: flex;
     flex-direction: column;
     box-shadow: 12px 12px 12px   rgba(0, 0, 0, 0.3),
     -10px 10px 10px rgba(0, 0, 0, 0.3);
-    margin-bottom: 5%;
+    margin-bottom: 3%;
     
     /* All card dekstop adjustments nested here */
     & span {
         color: black;
     }
     & h3 {
-        margin-left: 5%;
+        margin-left: 2.5%;
         margin-bottom: 0;
     }
     & p {
         font-size: 0.9rem;
         color: var(--secondary-color);
-        margin-left: 4.5%;
-        margin-right: 4.5%;
+        margin-left: 2.5%;
+        margin-right: 2.5%;
     }
     
+    & .description5 {
+        overflow-wrap: break-word;
+    }
     & .card-footer {
         height: 3vh;
-        margin-bottom: 0.5rem;
+        margin-bottom: 0.6rem;
     }
     & .live-preview {
         
